# python-memtools

./: .gitignore  CMakeLists.txt  README.md  dump_memory.py  pyproject.toml
docs/: testing-strategy.md
examples/: async-stall.py  client-memory-leak.py  simple-hang.py
src/: AnalysisShell.cc  AnalysisShell.hh  Common.hh  Main.cc  MemoryReader.cc  MemoryReader.hh
src/Types/: Base.cc  Base.hh  PyAsyncObjects.cc  PyAsyncObjects.hh  PyCellObject.cc  PyCellObject.hh  PyCodeObject.cc  PyCodeObject.hh  PyDictObject.cc  PyDictObject.hh  PyErr_StackItem.hh  PyFloatObject.cc  PyFloatObject.hh  PyFrameObject.cc  PyFrameObject.hh  PyGeneratorObjects.cc  PyGeneratorObjects.hh  PyIntegerObjects.cc  PyIntegerObjects.hh  PyInterpreterFrame.cc  PyInterpreterFrame.hh  PyListObject.cc  PyListObject.hh  PyObject.cc  PyObject.hh  PySetObject.cc  PySetObject.hh  PyStringObjects.cc  PyStringObjects.hh  PyThreadState.cc  PyThreadState.hh  PyTupleObject.cc  PyTupleObject.hh  PyTypeObject.cc  PyTypeObject.hh  PyVersion.hh
tests/: golden_310.py  golden_314.py  run_tests.py
tests/golden/: normalize_output.py  run_golden.py
tests/golden/expected/310/: repr-bytes.txt  repr-dict.txt
tests/golden/expected/314/: repr-str.txt
tests/golden/output/310/: repr-bool.txt  repr-list.txt  repr-tuple.txt
tests/golden/output/314/: repr-float.txt  repr-int.txt
