[project]
name = "python-memtools"
version = "0.0"
requires-python = "==3.10.*"

[tool.ruff]
line-length = 120
target-version = "py310"
indent-width = 4

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
